src/main/java/org/example/demo_ssr_v1_1/_core/errors/exception/Exception401.java
package org.example.demo_ssr_v1_1._core.errors.exception;

public class Exception401 extends RuntimeException {
    public Exception401(String message) {
        super(message);
    }
}
